# Pipex

./: Makefile  README.MD  check  find_path.c  infile  main.c  outfile  pipex  pipex.h  process.c  vald_input_args.c
Pipex/: Makefile  find_path.c  main.c  pipex.h  process.c
libft/: ft_free_all.c
tests/: CMakeLists.txt  pipex_test.cpp
